# cogwatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  build.ps1  pyproject.toml  requirements.txt  runner.py  scripts.py  setup.py
cogwatch/: __init__.py  cogwatch.py
examples/: README.md  classless_bot.py  example_bot.py  subclassed_bot.py
examples/commands/: ping.py
integrations/discord-py/: main.py
integrations/discord4py/: main.py
integrations/disnake/: main.py
integrations/disnake/commands/: ping.py
integrations/nextcord/: main.py
integrations/nextcord/commands/: ping.py
integrations/py-cord/: main.py
tests/: test_cogwatch.py
