[tool.poetry]
name = 'cogwatch'
version = '3.0.1'
description = 'Automatic hot-reloading for your discord.py command files.'
authors = ['Rob Wagner <rob@sombia.com>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/robertwayne/cogwatch'
repository = 'https://github.com/robertwayne/cogwatch'
keywords = ['discord.py', 'discord bot', 'cogs', 'hot-reload']
classifiers = [
  'Operating System :: OS Independent',
  'Typing :: Typed',
  'Topic :: Communications :: Chat',
  'Intended Audience :: Developers',
  'Development Status :: 5 - Production/Stable',
]

[tool.poetry.scripts]
example = 'runner:__poetry_run'
fmt = 'scripts:fmt'

[tool.poetry.dependencies]
python = '^3.8'
'discord.py' = '1.7.3'
watchfiles = "^0.15"

[tool.poetry.dev-dependencies]
pytest = '^7.1'
black = '^22.3'
python-dotenv = "^0.20.0"

[tool.black]
line-length = 120
skip-string-normalization = 1
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | assets
    | venv
  )/
)
'''

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
